--- a/api-spring-3/src/main/resources/application.yaml
+++ b/api-spring-3/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 cors:
   originPatterns: http://localhost:3000,http://localhost:8080,https://provensi.com.br
 file:
-  upload-dir: /home/runner/work/spring-boot-3/UploadDir
+  upload-dir: /Code/UploadDir
 security:
   jwt:
     token:
