--- a/api-spring-3/src/test/resources/application.yaml
+++ b/api-spring-3/src/test/resources/application.yaml
@@ -1,7 +1,7 @@
 cors:
   originPatterns: http://localhost:3000,http://localhost:8080,https://provensi.com.br 
 file:
-  upload-dir: /udemy-spring/UploadDir
+  upload-dir: /home/runner/work/spring-boot-3/UploadDir
 security:
   jwt:
     token:
